<resources>
    <string name="app_name">SpotiQuiz</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="todo">TODO</string>
    <string name="link_sobre">Sobre Nós</string>
    <string name="botao_proximo">proximo</string>
    <string name="note">Desenvolvido por \nThauan Trindade - 20870553\n Lucas Alves - 20761305\n Lucas Lacerda - 20787289\n\n
        SpotiQuiz é um aplicativo inteligente que é projetado com interface de usuário simples e otimizada. SpotiQuiz conta com perguntas da categoria musical referente ao Spotify.</string>
    <string name="spotiquiz">SpotiQuiz</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="visit_website">Visit Website</string>
    <string name="sobre_n_s">Sobre Nós</string>

</resources>
