<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="376dp"
        android:layout_height="311dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/ic_principal" />

    <Button
        android:layout_width="289dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_iniciar"
        android:theme="@style/botaoPadrao"
        android:onClick="startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.683" />


    <Button
        android:id="@+id/btnSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="?attr/selectableItemBackground"
        android:onClick="sobreNos"
        android:text="@string/link_sobre"
        android:textColor="#56a15a"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>